# corepy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  bench.sh  build.sh  pyproject.toml  rebuild.sh  setup_dev.sh
.atom_env/: pyvenv.cfg
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  backend_thresholds.py  compare_benchmark.py  matmul_benchmark.py  profiler_overhead.py  runner.py
bindings/python/: main.cpp
corepy/: __init__.py  tensor.py
corepy/backend/: __init__.py  backend.py  device.py  dispatch.py  reference.py  selector.py  session.py  types.py
corepy/data/: table.py
corepy/ops/: math.py
corepy/profiler/: __init__.py  core.py
corepy/runtime/: pipeline.py
corepy/schema/: base.py
csrc/: CMakeLists.txt
csrc/include/: corepy_kernels.h
csrc/src/cpu/: blas_kernels.cpp  dummy.cpp  elementwise.cpp  matmul.cpp  reduce.cpp
docs/: api.rst  index.rst
docs/00_overview/: IMPLEMENTATION_ROADMAP.md  UPGRADE_PLAN_2026.md  index.rst  roadmap.md
docs/01_quickstart/: QUICKSTART_ARENA_INTEGRATION.md  gpu_quick_reference.md  gpu_setup.md  gpu_setup_macos.md  gpu_setup_windows.md  index.rst  install.md  platform_support.md  usage.md
docs/02_core_concepts/: backend_openblas.md  index.rst  performance_analysis.md  profiling.md
docs/03_architecture/: PHASE_5_BUFFER_INTERFACE.md  PHASE_6_IMPLEMENTATION_REPORT.md  SYSTEMS_REPORT_MEMORY_SAFETY.md  architecture.md  backend_resolution_report.md  execution_model.md  index.rst
docs/05_advanced/: index.rst
docs/06_internals/: index.rst  maintainability_report.md
docs/07_contributing/: index.rst
docs/08_faq_troubleshooting/: index.rst
docs/archive/: ARCHITECTURE_VISION.md  GAP_ANALYSIS_SUMMARY.md  PROFILING_FEATURE_SUMMARY.md  README.md  backend_architecture_tech_breakdown.txt  roadmap_prompt.txt
examples/: README.md  cpu_features_demo.py  hello_corepy.py  validated_examples.py  working_examples.py
rust/corepy-runtime/: Cargo.toml  build.rs  pyproject.toml
rust/corepy-runtime/.cargo/: config.toml
rust/corepy-runtime/src/: lib.rs
rust/corepy-runtime/src/backend/: mod.rs
rust/corepy-runtime/src/ffi/: mod.rs  python.rs
rust/corepy-runtime/src/ops/: elementwise.rs  matmul.rs  mod.rs  reduce.rs
rust/corepy-runtime/src/profiler/: core.rs  metrics.rs  mod.rs
rust/corepy-runtime/src/scheduler/: arena.rs  mod.rs  rayon_pool.rs
rust/corepy-runtime/src/tensor/: mod.rs
scripts/: bench.sh  build.sh  rebuild.sh  setup_dev.sh
tests/: README.md  bench_arena.py  bench_dotproduct.py  bench_matmul_2d.py  bench_parallel.py  conftest.py  repro_strides.py  test_backend_selector.py  test_buffer_protocol.py  test_dispatch.py  test_dispatch_matmul.py  test_gap_analysis.py  test_matmul_2d.py  test_profiler.py  test_sanity_compat.py  test_tensor_all.py  test_tensor_integration.py
tests/integration/: test_flow.py  test_released_api.py
tests/unit/: test_api.py  test_data.py  test_init_fallback.py  test_pipeline.py  test_schema.py
tutorials/01_profiling_basics/: 01_enable_profiling.py  02_first_report.py  03_understanding_metrics.py  README.md
tutorials/02_intermediate/: 01_context_manager.py  02_custom_decorators.py  03_bottleneck_detection.py  04_optimization_tips.py  README.md
tutorials/03_advanced/: 01_flamegraph_analysis.py  02_export_integration.py  03_custom_baselines.py  04_production_monitoring.py  README.md
tutorials/04_case_studies/: 01_slow_training_loop.py  README.md
