[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "corepy"
version = "0.2.1"
description = "A unified, high-performance core runtime for data, computation, and AI workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Corepy Team", email = "maintainers@corepy.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing-extensions>=4.6.0",
    "pydantic>=2.0.0",
    "corepy-runtime==0.2.1",  # Exact version - must match Rust runtime
    "numpy>=2.0.2",
]

[project.optional-dependencies]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-foundation-software/corepy"
Documentation = "https://corepy.readthedocs.io/"
Repository = "https://github.com/ai-foundation-software/corepy.git"
Issues = "https://github.com/ai-foundation-software/corepy/issues"



[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=corepy"
testpaths = [
    "tests",

]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B020", "B007", "F841", "E712", "E402", "F811", "R", "F401", "UP", "E701"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build",
    "twine",
    "maturin>=1.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "cmake>=3.15",
    "ninja",
    "pybind11",
    "scikit-build-core>=0.4.3",
    "patchelf>=0.17.2; sys_platform == 'linux'",
]

[tool.uv]

[tool.uv.sources]
corepy-runtime = { path = "rust/corepy-runtime" }
